[gd_scene load_steps=5 format=2]

[ext_resource path="res://UI/AboutScreen.gd" type="Script" id=1]
[ext_resource path="res://UI/CreditsScreen.tscn" type="PackedScene" id=2]
[ext_resource path="res://UI/LicenseTextScreen.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/background-space.png" type="Texture" id=6]

[node name="AboutScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
texture = ExtResource( 6 )

[node name="CopyrightScreen" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 100
custom_constants/margin_top = 50
custom_constants/margin_left = 100
custom_constants/margin_bottom = 50

[node name="Panel" type="Panel" parent="CopyrightScreen"]
margin_left = 100.0
margin_top = 50.0
margin_right = 1820.0
margin_bottom = 1030.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer2" type="VBoxContainer" parent="CopyrightScreen"]
margin_left = 100.0
margin_top = 50.0
margin_right = 1820.0
margin_bottom = 1030.0
mouse_filter = 2
size_flags_horizontal = 3
custom_constants/separation = 43
alignment = 1

[node name="Copyright" type="Label" parent="CopyrightScreen/VBoxContainer2"]
margin_top = 200.0
margin_right = 1720.0
margin_bottom = 249.0
text = "Copyright 2023 Carlos Esteban García Sánchez"
align = 1

[node name="LicenseNotice" type="Label" parent="CopyrightScreen/VBoxContainer2"]
margin_top = 292.0
margin_right = 1720.0
margin_bottom = 497.0
text = "This program comes with ABSOLUTELY NO WARRANTY; click License button for details.
    This is free software, and you are welcome to redistribute it
    under certain conditions; click License button for details."
align = 1
autowrap = true

[node name="CenterContainer2" type="CenterContainer" parent="CopyrightScreen/VBoxContainer2"]
margin_top = 540.0
margin_right = 1720.0
margin_bottom = 591.0

[node name="Credits" type="Button" parent="CopyrightScreen/VBoxContainer2/CenterContainer2"]
margin_left = 756.0
margin_right = 964.0
margin_bottom = 51.0
text = "Credits"

[node name="CenterContainer3" type="CenterContainer" parent="CopyrightScreen/VBoxContainer2"]
margin_top = 634.0
margin_right = 1720.0
margin_bottom = 685.0

[node name="License" type="Button" parent="CopyrightScreen/VBoxContainer2/CenterContainer3"]
margin_left = 756.0
margin_right = 964.0
margin_bottom = 51.0
text = "License"

[node name="CenterContainer" type="CenterContainer" parent="CopyrightScreen/VBoxContainer2"]
margin_top = 728.0
margin_right = 1720.0
margin_bottom = 779.0

[node name="Return" type="Button" parent="CopyrightScreen/VBoxContainer2/CenterContainer"]
margin_left = 576.0
margin_right = 1144.0
margin_bottom = 51.0
text = "Return to Title Screen"

[node name="CreditsScreen" parent="." instance=ExtResource( 2 )]
visible = false

[node name="LicenseTextScreen" parent="." instance=ExtResource( 3 )]
visible = false

[connection signal="pressed" from="CopyrightScreen/VBoxContainer2/CenterContainer2/Credits" to="." method="_on_Credits_pressed"]
[connection signal="pressed" from="CopyrightScreen/VBoxContainer2/CenterContainer3/License" to="." method="_on_License_pressed"]
[connection signal="pressed" from="CopyrightScreen/VBoxContainer2/CenterContainer/Return" to="." method="_on_Return_pressed"]
[connection signal="return_to_about_screen" from="CreditsScreen" to="." method="_on_CreditsScreen_return_to_about_screen"]
[connection signal="return_to_about_screen" from="LicenseTextScreen" to="." method="_on_LicenseTextScreen_return_to_about_screen"]
